# bestfit

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  Makefile  README.md  pixi.toml
bestfitpy/: CMakeLists.txt  README.md  pyproject.toml
bestfitpy/src/bestfit_core/: include
bestfitpy/src/bestfitpy/: __init__.py  analysis.py  distributions.py  mcmc.py  stats.py
bestfitpy/src/bestfitpy/fixtures/: README.md
bestfitpy/src/bestfitpy/fixtures/analyses/: ar_analysis_smoke.json  arima_analysis_smoke.json  arimax_analysis_smoke.json  bivariate_analysis_smoke.json  bootstrap_analysis_smoke.json  bulletin17c_analysis_smoke.json  coincident_frequency_analysis_smoke.json  diagnostics_smoke.json  fit_distributions_smoke.json  ma_analysis_smoke.json  mixture_analysis_smoke.json  point_process_analysis_smoke.json  posterior_predictive_check_smoke.json  prior_predictive_check_smoke.json  rating_curve_analysis_smoke.json  univariate_analysis_smoke.json
bestfitpy/src/bestfitpy/fixtures/data/: goodness_of_fit.json
bestfitpy/src/bestfitpy/fixtures/estimation/: bivariate_sim.json  bivariate_smoke.json  competing_risks.json  competing_risks_smoke.json  map_normal.json  mle_optimizers_smoke.json  rating_curve_smoke.json  simulation_smoke.json  time_series_ar_sim.json  time_series_ar_smoke.json  time_series_arima_smoke.json  time_series_ma_smoke.json
bestfitpy/src/bestfitpy/fixtures/special_functions/: beta_incomplete.json  beta_incomplete_inverse.json  differential_evolution.json  erf.json  erfc.json  gamma_trigamma.json  histogram.json  inverse_erf.json  numerical_derivative.json  plotting_positions.json  running_statistics.json
bestfitpy/src/bindings/: analysis.cpp  bindings.hpp  bootstrap.cpp  copula.cpp  dist.cpp  estimation.cpp  gev.cpp  mcmc.cpp  mvd.cpp  sobol.cpp  stats.cpp
bestfitpy/tests/: test_analysis.py  test_distribution.py  test_extended_analyses.py  test_fixtures.py  test_gev.py  test_mcmc_sample.py  test_sobol.py  test_stats.py
core/: CMakeLists.txt  README.md
core/include/bestfit/analyses/bivariate/: coincident_frequency_analysis.hpp
core/include/bestfit/analyses/spatial_extremes/: spatial_gev_cross_validation_results.hpp
core/include/bestfit/analyses/support/: i_bayesian_analysis.hpp  i_probability_ordinates.hpp
core/include/bestfit/analyses/time_series/: ar_analysis.hpp  arima_analysis.hpp  arimax_analysis.hpp  ma_analysis.hpp
core/include/bestfit/analyses/univariate/: bulletin17c_analysis.hpp  composite_analysis.hpp  mixture_analysis.hpp
core/include/bestfit/diagnostics/: influence_diagnostics.hpp  leverage_diagnostics.hpp  posterior_predictive_check.hpp  predictive_check_results.hpp
core/include/bestfit/estimation/: bayesian_analysis.hpp  generalized_method_of_moments.hpp  gmm_delegates.hpp  maximum_a_posteriori.hpp  maximum_likelihood.hpp
core/include/bestfit/estimation/support/: optimizer_adapters.hpp
core/include/bestfit/models/: json_lite.hpp  model_spec.hpp  univariate_distribution_model.hpp
core/include/bestfit/models/bivariate_distribution/: bivariate_distribution.hpp
core/include/bestfit/models/data_frame/: data_frame_plotting.hpp  threshold_diagnostics.hpp
core/include/bestfit/models/distribution_fitting/: fitted_distribution.hpp
core/include/bestfit/models/link_functions/: centered_link.hpp  log_asinh_link.hpp  ses_link.hpp
core/include/bestfit/models/rating_curve/: rating_curve.hpp
core/include/bestfit/models/support/: data_component.hpp  i_gmm_model.hpp  model_base.hpp  model_parameter.hpp  quantile_prior.hpp  simulatable.hpp  subscript_formatter.hpp
core/include/bestfit/models/time_series/: auto_regressive.hpp  moving_average.hpp
core/include/bestfit/models/trend_functions/: constant_trend.hpp  exponential_trend.hpp  general_linear_function.hpp  linear_trend.hpp  logistic_trend.hpp  power_trend.hpp  reciprocal_trend.hpp
core/include/bestfit/numerics/: tools.hpp
core/include/corehydro/: version.hpp
core/include/corehydro/diagnostics/: influence_diagnostics.hpp  leverage_diagnostics.hpp  posterior_predictive_check.hpp  predictive_check_results.hpp  predictive_summary.hpp  prior_influence_diagnostics.hpp  prior_predictive_check.hpp
core/include/corehydro/estimation/: bayesian_analysis.hpp  generalized_method_of_moments.hpp  gmm_delegates.hpp  maximum_a_posteriori.hpp  maximum_likelihood.hpp  numerical_diff.hpp  optimization_method.hpp
core/include/corehydro/models/: json_lite.hpp  model_spec.hpp
core/include/corehydro/numerics/: tools.hpp
core/tests/: check.hpp  optimization_test_functions.hpp  test_analysis_base.cpp  test_arima.cpp  test_arimax.cpp  test_bayesian_analysis.cpp  test_bestfit_link_functions.cpp  test_bivariate_analysis.cpp  test_bivariate_distribution.cpp  test_bootstrap_analysis.cpp  test_box_cox.cpp  test_brent_search.cpp  test_bulletin17c.cpp  test_bulletin17c_analysis.cpp  test_bulletin17c_clone_with_data_frame.cpp  test_cached_mvn_gaussian_copula.cpp  test_coincident_frequency_analysis.cpp  test_competing_risks_model.cpp  test_composite_analysis.cpp  test_copula_clone.cpp  test_corehydro_link_functions.cpp  test_data_frame.cpp  test_data_frame_bootstrap.cpp  test_data_types.cpp  test_empirical_distribution.cpp  test_fitting_analysis.cpp  test_fixtures.cpp  test_general_linear_function.cpp  test_generalized_extreme_value.cpp  test_gev_estimation.cpp  test_gmm.cpp  test_goodness_of_fit.cpp  test_influence_diagnostics.cpp  test_kernel_density.cpp  test_leverage_diagnostics.cpp  test_linear_regression.cpp  test_link_functions.cpp  test_matrix_regularization.cpp  test_maximum_a_posteriori.cpp  test_maximum_likelihood.cpp  (+41 more)
corehydropy/: CMakeLists.txt  README.md  pyproject.toml
corehydropy/src/bindings/: analysis.cpp  bootstrap.cpp  copula.cpp  dist.cpp  estimation.cpp  gev.cpp  mcmc.cpp  mvd.cpp  sobol.cpp  stats.cpp
corehydropy/src/corehydropy/: __init__.py  analysis.py  distributions.py  mcmc.py  stats.py
corehydropy/tests/: test_analysis.py  test_distribution.py  test_extended_analyses.py  test_fixtures.py  test_gev.py  test_mcmc_sample.py  test_sobol.py  test_stats.py
(+957 files in other folders)
