cmake_minimum_required(VERSION 3.15)
project(bestfitpy LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(pybind11 CONFIG REQUIRED)

pybind11_add_module(_core src/bindings/gev.cpp src/bindings/dist.cpp src/bindings/mvd.cpp src/bindings/copula.cpp src/bindings/sobol.cpp src/bindings/mcmc.cpp src/bindings/bootstrap.cpp src/bindings/estimation.cpp src/bindings/analysis.cpp)
target_include_directories(_core PRIVATE
  ${CMAKE_CURRENT_SOURCE_DIR}/src/bestfit_core/include
  ${CMAKE_CURRENT_SOURCE_DIR}/src/bindings)

# Install the compiled module into the bestfitpy package.
install(TARGETS _core DESTINATION bestfitpy)
