[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "corehydropy"
version = "0.2.0"
description = "Bayesian flood-frequency and extreme-value analysis (Python bindings to the corehydro C++ core, validated against USACE-RMC Numerics 2.1.4 and RMC.BestFit 2.0.0)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "0BSD" }
authors = [{ name = "Cam Bracken", email = "cameron.bracken@pm.me" }]
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/cameronbracken/corehydro"
Documentation = "https://cameronbracken.github.io/corehydro/"
Repository = "https://github.com/cameronbracken/corehydro"

[tool.scikit-build]
minimum-version = "build-system.requires"
wheel.packages = ["src/corehydropy"]
